# tfac-CoH

./: .gitignore  CoH Tensor DataSet for PLS.nc  PLS_Analysis_011623.py  README.md  makefile  missing_data_imput.ipynb  pyproject.toml
.github/workflows/: build.yml  test.yml
CoH/figures/: figure1.py  figureCommon.py
coh/: flow.py  flow_rec.py  imports.py  tensor.py
coh/data/: CoH Tensor DataSet.nc  CoHTensorDataJustSignal.nc  CoH_Flow_DF_Abund.csv  CoH_Flow_DF_Basal.csv  CoH_Flow_Gates.csv  CoH_Flow_Gates_Receptors.csv  CoH_Heatmap_DF.csv  CoH_Heatmap_DF_pSTAT3.csv  CoH_Heatmap_DF_pSTAT5.csv  CoH_Heatmap_DF_pSTAT6.csv  CoH_Matrix.csv  CoH_Matrix_Basal.csv  CoH_Matrix_FC.csv  CoH_Matrix_Rec.csv  CoH_PCA.csv  CoH_Rec.nc  CoH_Rec_DF.csv  CoH_Tensor_Abundance.nc  CoH_Tensor_DataSet_Basal.nc  CoH_Tensor_DataSet_FC.nc  NN CoH Tensor DataSet.nc  Patient_Receptor_Panels.csv  Patient_Status.csv  Patient_Status_Rec.csv  signaling.pkl
coh/data/SC_seq/: CITEcellTypes.csv  RNAfeatures.csv  SurfaceGenes.csv
coh/figures/: common.py  figure1.py  figure2.py  figure3.py  figure3hm.py  figure4.py  figure4hm.py  figure5.py  figure5hm.py  figure6.py  figure7.py  figure8.py  figure8A.py  figure8B.py  figureCommon.py  figureCorrSig.py  figureS1.py  figureS10.py  figureS2.py  figureS3.py  figureS4.py  figureS5.py  figureS6.py  figureS7.py  figureS8.py  figureS9.py
coh/tests/: test_GMM.py
