[tool.poetry]
name = "coh"
version = "0.1.0"
description = "Decoding Cancer Cytokine Signaling Networks"
authors = ["Brian Orcutt-Jahns, Aaron Meyer"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.24.2"
seaborn = "^0.11.2"
scipy = "^1.7.3"
pandas = "^1.5.3"
matplotlib = "^3.5.0"
scikit-learn = "^1.2.1"
tensorly = "^0.8.0"
xarray = "^2022.3.0"
tensorpack = {git = "https://github.com/meyer-lab/tensorpack.git", rev = "main"}
statannot = "^0.2.3"
flowcytometrytools = {git = "https://github.com/meyer-lab/FlowCytometryToolsFork.git"}
fcsparser = "0.2.4"
statsmodels = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "coh.figures.common:genFigure"
